Closed Bug 1759281 Opened 4 years ago Closed 4 years ago

Bustage on WasmInstance.h e.g: error: no member named 'pendingException_' in 'Instance' when Gecko 100 merges to Beta on 2022-04-04

Categories

(Core :: JavaScript: WebAssembly, defect, P2)

defect

Tracking

()

VERIFIED FIXED
100 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox98 --- unaffected
firefox99 --- unaffected
firefox100 + verified

People

(Reporter: nataliaCs, Assigned: rhunt)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

[task 2022-03-12T11:58:45.867Z] In file included from /builds/worker/checkouts/gecko/js/src/wasm/WasmTlsData.h:27:
[task 2022-03-12T11:58:45.867Z] /builds/worker/checkouts/gecko/js/src/wasm/WasmInstance.h:240:12: error: no member named 'pendingException_' in 'Instance'
[task 2022-03-12T11:58:45.867Z]     return offsetof(Instance, pendingException_);
[task 2022-03-12T11:58:45.867Z]            ^                  ~~~~~~~~~~~~~~~~~
[task 2022-03-12T11:55:20.433Z] /builds/worker/workspace/sm-package/mozjs-100.0.0/js/src/wasm/WasmInstance.h:240:31: error: 'class js::wasm::Instance' has no member named 'pendingException_'; did you mean 'setPendingException'?
[task 2022-03-12T11:55:20.433Z]      return offsetof(Instance, pendingException_);
[task 2022-03-12T11:55:20.433Z]                           

And many other failures within the failure logs, all related to WasmInstance.h
Ryan, these might be caused by Bug 1753692.
Can you take a look please? Thank you.

Flags: needinfo?(rhunt)
Assignee: nobody → rhunt
Status: NEW → ASSIGNED
Priority: -- → P2
Has Regression Range: --- → yes

I have a patch for this. I'm also filing bug 1759542 to try to prevent this from happening in the future.

Flags: needinfo?(rhunt)

Rebasing left an unused setPendingException method that
somehow didn't cause an error, until it causes compile
errors without exception handling.

There's also offsetof methods that need conditional
compilation.

The patch seems to be working on today's beta sim.

Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 100 Branch

Verified fixed as of today's central as beta-sim

Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: