Bug 1759281 - wasm: Fix build bustage. r=lth

Rebasing left an unused setPendingException method that
somehow didn't cause an error, until it causes compile
errors without exception handling.

There's also offsetof methods that need conditional
compilation.

Differential Revision: https://phabricator.services.mozilla.com/D140992